--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -17017,14 +17017,9 @@ series:
         dtstart: 2022-11-22 18:30:00+01:00
         dtend: 2022-11-22 19:30:00+01:00
   - meetupcom:
-      meta_description: '**Talk Synopsis**
-
-        Developing with graph databases has a number of challenges, such as the modelling of complex schemas, and maintaining data consistency in your database.
-
-
-        '
-      og_title: Graph Databases vs TypeDB | What You Can't do With Graphs, Thu, Dec 8, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/289790311/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Graph Databases vs TypeDB | What You Can't do With Graphs
         description: 'TypeDB Prague Engineers
