--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -52466,3 +52466,131 @@ series:
         url: https://www.meetup.com/morning-talks/events/290691720/
         dtstart: 2023-02-21 09:00:00+01:00
         dtend: 2023-02-21 10:00:00+01:00
+  - meetupcom:
+      meta_description: 'Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení.
+
+        https://www.datascript.cz/morning-talks/apache-kafka-nejenom-v-aplikacich-zalozenych-na-mikroslu'
+      og_title: Apache Kafka (nejenom) v aplikacích založených na mikroslužbách, Wed, Mar 8, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/291952853/
+      ical:
+        summary: Apache Kafka (nejenom) v aplikacích založených na mikroslužbách
+        description: 'Morning Talks
+
+          Wednesday, March 8 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení.https://www.datascript.cz/morning-talks/apache-kafka-nejenom-v-aplikacich-z...
+
+
+          https://www.meetup.com/morning-talks/events/291952853/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952853@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952853/
+        dtstart: 2023-03-08 09:00:00+01:00
+        dtend: 2023-03-08 10:00:00+01:00
+  - meetupcom:
+      meta_description: 'Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/sitova-vrstva-v-kubernetes/
+
+
+        Kubernetes je jasná volba p'
+      og_title: Síťová vrstva v Kubernetes, Wed, Mar 15, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/291952876/
+      ical:
+        summary: Síťová vrstva v Kubernetes
+        description: 'Morning Talks
+
+          Wednesday, March 15 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/sitova-vrstva-v-kubernetes/ Kubern...\n
+
+          https://www.meetup.com/morning-talks/events/291952876/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952876@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952876/
+        dtstart: 2023-03-15 09:00:00+01:00
+        dtend: 2023-03-15 10:00:00+01:00
+  - meetupcom:
+      meta_description: 'Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/navrh-systemu-na-pevnem-zakladu/
+
+
+        V posledních letech se'
+      og_title: Návrh systému na pevném základu, Wed, Mar 22, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/291952895/
+      ical:
+        summary: Návrh systému na pevném základu
+        description: 'Morning Talks
+
+          Wednesday, March 22 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/navrh-systemu-na-pevnem-zakladu/ V...\n
+
+          https://www.meetup.com/morning-talks/events/291952895/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952895@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952895/
+        dtstart: 2023-03-22 09:00:00+01:00
+        dtend: 2023-03-22 10:00:00+01:00
+  - meetupcom:
+      meta_description: 'Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení: https://www.datascript.cz/morning-talks/neuronove-site-a-jak-algoritmy-vidi-a-ctou/
+
+
+        Vstupom pre'
+      og_title: Neuronové sítě a jak algoritmy vidí a čtou, Wed, Mar 29, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/291952900/
+      ical:
+        summary: Neuronové sítě a jak algoritmy vidí a čtou
+        description: 'Morning Talks
+
+          Wednesday, March 29 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení:...
+
+
+          https://www.meetup.com/morning-talks/events/291952900/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952900@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952900/
+        dtstart: 2023-03-29 09:00:00+02:00
+        dtend: 2023-03-29 10:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Microservices patterny a jejich použítí v praxi
+        description: 'Morning Talks
+
+          Tuesday, February 21 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/microservices-patterny-a-jejich-pouziti-v-praxi/ U...\n
+
+          https://www.meetup.com/morning-talks/events/290691720/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691720@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691720/
+        dtstart: 2023-02-21 09:00:00+01:00
+        dtend: 2023-02-21 10:00:00+01:00
