--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -27691,3 +27691,27 @@ series:
         url: https://www.meetup.com/gdgprague/events/xqcsqsyfcgbhc/
         dtstart: 2023-04-25 18:30:00+02:00
         dtend: 2023-04-25 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, February 28 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/291492945/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyfcdblc@meetup.com
+        url: https://www.meetup.com/gdgprague/events/291492945/
+        dtstart: 2023-02-28 18:30:00+01:00
+        dtend: 2023-02-28 20:30:00+01:00
