--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -52916,3 +52916,26 @@ series:
         url: https://www.meetup.com/morning-talks/events/290691720/
         dtstart: 2023-02-21 09:00:00+01:00
         dtend: 2023-02-21 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Microservices patterny a jejich použítí v praxi
+        description: 'Morning Talks
+
+          Tuesday, February 21 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/microservices-patterny-a-jejich-pouziti-v-praxi/ U...\n
+
+          https://www.meetup.com/morning-talks/events/290691720/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691720@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691720/
+        dtstart: 2023-02-21 09:00:00+01:00
+        dtend: 2023-02-21 10:00:00+01:00
